# lab5

./: CMakeLists.txt  main.cpp
cimg/: CImg.h
